Minor changes to mobile layout
Removed Breadcrumb and changed buttons

--- a/index.html
+++ b/index.html
@@ -42,19 +42,13 @@
         </div>
     </nav>
 
-    
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb bg-white">
-            <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-    </nav>
-    <div class="card mx-5 drd-01-synth" id="drd-01-synth-small">
+    <div class="card mt-3 mx-5 drd-01-synth" id="drd-01-synth-small">
         <div class="card-header bg-dark text-light" id="drd-01-params">
             <div class="MainPanel" id="MainPanel-small">
                 <div id="MainPanel-section-controls">
-                    <button id="voices-tab">Voices</button>
+                    <button id="voices-tab">Vox</button>
                     <button id="amp-tab">Amp</button>
-                    <button id="effects-tab">Effects</button>
+                    <button id="effects-tab">Fx</button>
                 </div>
                 <div class="mt-3" id="MainPanel-sections">
                     <div id="VoicesPanel" aria-labelledby="VoicesPanel">
