Rebranded as CerealOSC

--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="Midiosc.html">midiosc</a>
+                        <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max.html">Max projects</a>
