--- a/Max.html
+++ b/Max.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="Midiosc.html">midiosc</a>
+                        <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max.html">Max projects</a>
@@ -84,7 +84,7 @@
                             <img src="./static/images/Max/liveclip.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
-                            <p>Minimalist abstraction of an Ableton Live Clip for the Monome Grid</p>
+                            <p>Minimalist abstraction of an Ableton Live Clip for a Grid controller</p>
                         </div>
                     </div>
                     <div class="carousel-item my-5">
@@ -95,7 +95,7 @@
                             <img src="./static/images/Max/chordophone.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
-                            <p>A chordophone inspired instrument for the Monome Grid.</p>
+                            <p>A chordophone inspired instrument for a Grid controller.</p>
                         </div>
                     </div>
                     <div class="carousel-item my-5">
