--- a/Chordophone.html
+++ b/Chordophone.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="Midiosc.html">midiosc</a>
+                        <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max.html">Max projects</a>
@@ -63,9 +63,8 @@
                     <img src="./static/images/Chordophone/chordophone.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
-                    This patch is to be used with a Monome Grid, specifically one with 128 buttons oriented horizontally. If you do
-                    not have a Monome Grid, our app midiosc will allow you to use this patch with a Midi controller or
-                    with your mouse with midiosc v1.1.0.
+                    This patch is to be used with a Grid controller, specifically one with 128 buttons oriented horizontally. If you do
+                    not have a Grid controller, our app CerealOSC will allow you to use this patch with your mouse with CerealOSC v1.1.0.
                 </p>
                 <h3 class="text-center">Manual</h3>
                 <p>
