--- a/LiveClip.html
+++ b/LiveClip.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="Midiosc.html">midiosc</a>
+                        <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max.html">Max projects</a>
@@ -69,15 +69,15 @@
                     Model (LOM) accessible via a suite of provided Max objects and JavaScript.
                 </p>
                 <p>
-                    LiveClip allows a Monome Grid to edit midi notes in a midi clip stored inside of Ableton. It was designed with Ableton
+                    LiveClip allows a Grid to edit midi notes in a midi clip stored inside of Ableton. It was designed with Ableton
                     Live 9, but probably will work with newer versions of live. The API calls are all in a JavaScript file, so should be easy
                     to hack if it's not working for you. If you look at the LOM you'll see that there are some now deprecated methods for editing
                     the notes used in the project.
                 </p>
                 <p>
-                    This patch is to be used with a Monome Grid, specifically one with 128 buttons oriented horizontally. If you do
-                    not have a Monome Grid, our app midiosc will allow you to use this patch with a Midi controller or
-                    with your mouse with midiosc v1.1.0.
+                    This patch is to be used with a Grid, specifically one with 128 buttons oriented horizontally. If you do
+                    not have a Grid, our app midiosc will allow you to use this patch with a Midi controller or
+                    with your mouse with CerealOSC v1.1.0.
                 </p>
                 <div class="my-3">
                     <img src="./static/images/LiveClip/liveclip.png" class="home-card-image img-fluid d-block mx-auto">
