Added Patreon page

--- a/Max.html
+++ b/Max.html
@@ -42,6 +42,9 @@
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max.html">Max projects</a>
                     </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;Patreon&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="Patreon.html">Patreon</a>
+                    </li>
                 </ul>
             </div>
         </nav>
