A nicer about page and a spoonful of CerealOSC

--- a/CerealOSC.html
+++ b/CerealOSC.html
@@ -65,6 +65,9 @@
                 </div>
                 <h3 class="text-center">A CerealOSC server for midi devices</h3>
                 <p>
+                    This is a hard fork of the serialosc server. We like puns and wordgames here, so we'll call it a soft spoon of CerealOSC.
+                </p>
+                <p>
                     CerealOSC is a Java Swing app that acts as a bridge between applications designed for grid controllers that communicate over MIDI.
                     It also provides the ability to create virtual grids that respond to mouse clicks. The goal of CerealOSC is to provide an entry point 
                     for anyone curious about electronic music or programming to try building their own instrument.
