--- a/About.html
+++ b/About.html
@@ -50,67 +50,35 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white">
                 <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">About</li>
+                <li class="breadcrumb-item active" aria-current="page">Welcome</li>
             </ol>
         </nav>
         <div class="card mx-5 mb-5">
             <div class="card-header text-center bg-dark text-light">
-                <h1 class="display-4">About</h1>
+                <h1 class="display-4">Welcome</h1>
             </div>
             <div class="card-body justify-content-center">
                 <div class="my-3">
                     <p>
-                        SitStayCreate is an example of why we can't have nice things. Trans owned and operated, this website
-                        was the target of harrassment and cyberbullying for no reason. I literally made free stuff for you to
-                        enjoy using and was repaid in the worst ways. I even provided free support for the software I wrote.
+                        Hello beautiful,
+                        My name is Ava Hazel. I'm a musician and technician. This is a sacred space.
                     </p>
                     <p>
-                        While the software I wrote is still available, I am going to be making a few tweaks in the coming
-                        weeks/months/as time and my mental health permit. Consider this a hard fork of serialosc. We like
-                        puns and wordgames here, so we'll call it a soft spoon of CerealOSC.
+                        Had I the heaven's embroidered cloths,
+                        Enwrought with golden and silver light,
+                        The blue and the dim and the dark
+                        cloths
+                        Of night and light and the half-light
+                        I would spread the cloths under your feet:
+                        But I, being poor, have only my dreams;
+                        I have spread my dreams under your
+                        feet;
+                        Tread softly because you
+                        tread on my dreams.
                     </p>
                     <p>
-                        No longer SitStayCreate and disillusioned with the electronic music scene (Read as: I finally 
-                        understand what is meant by the male-gaze and I'm disgusted. This is not to say that men are bad.
-                        There are a lot of great cishet men in my life that are wonderful parents who have been here for me.
-                        I will not tolerate man-bashing here any more than I tolerate any sort of bullying) I have decided
-                        I need to move into a new direction. My target audience is 35+, probably hella gay, and I do not 
-                        intend to make commercial products. If I do, it is purely accidental.
-                    </p>
-                    <p>
-                        When I was young, there was the underground music scene. It wasn't exactly anything goes, but it
-                        was able to cover a wider range of topics than the modern lowest-common-denominator 
-                        must-be-marketable-internationally immediately-available-for-everyone music scenes of today.
-                        Not everyone wants to be famous and most of us probably shouldn't be given that level of attention.
-                        *Raises both hands in surrender*.
-                    </p>
-                    <p>
-                        This used to exist in boutique record stores and later on blogs run by "taste makers." Anecdotaly,
-                        these were mostly trust-fund adolescents/young adults who had the privilege to spend their time picking 
-                        who was and wasn't cool. Nowadays we have industry plants labeled as "influencers" that create content 
-                        for the mostly consolidated market of internet platforms. I don't care really and am not here to change
-                        the world, I'm here to reclaim a space for those who aren't comfortable in the spotlight, with an emphasis
-                        on safety.
-                    </p>
-                    <p>
-                        I am McGnars herself and this is the Magic Ohno Show. Welcome to the free-k show. Where non-neurotypicals
-                        are celebrated, where no one needs to feel discriminated against, and where everyone is welcome, but most
-                        will be confused. My genre is fixed-edge (like straight edge, but we broke it and glued it back together).
-                    </p>
-                    <p>
-                        Longevity is the name of the game here, not as in having long careers, but as in I need a creative outlet
-                        and will focus on maintaining that as a priority over what's fashionable. Some of you will be disappointed
-                        by the low-quality, but many of you don't remember DIY or LoFi during their hey-days (I was a tween and 
-                        pimply teen at the tail-end of these genres). This is a project like Built to Spill where I will put on
-                        my friends, but do not promise a constant line-up. The music is probably going to be worse than you expect,
-                        but that's all part of the show. The sonic equivalent of backyard wrestling without the arthritis and 
-                        herniated disks.
-                    </p>
-                    <p>
-                        Since I like the written word and think there isn't enough of plain-talking new-sincerity outlets and 
-                        because I know many people who are smarter than I am, I hope to also maintain a diy FreeZine. It will
-                        not be released periodically, but instead as time permits and relevant topics present themselves. This
-                        is a place for healing, an oasis in the otherwise polluted and overly-politicized web full of hot-takes.
+                        This site is dedicated to the loves of my life and the down-trodden. May
+                        you find peace under my care.
                     </p>
                 </div>
             </div>
