--- a/About.html
+++ b/About.html
@@ -64,7 +64,7 @@
                         My name is Ava Hazel. I'm a musician and technician. This is a sacred space.
                     </p>
                     <p>
-                        Had I the heaven's embroidered cloths,
+                        Had I the heavens' embroidered cloths,
                     </p>
                     <p>
                         Enwrought with golden and silver light,
