Updated home page

--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -29,22 +29,29 @@
         
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">SitStayCreate</a>
+            <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="About.html">About</a>
-                    </li>
-                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Midiosc.html">midiosc</a>
                     </li>
-                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="Max.html">Max projects</a>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="Max_Intro.html">Max Intro</a>
+                    </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;chordophone&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
+                    </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;diatonicpads&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
+                    </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;liveclip&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="LiveClip.html">LiveClip</a>
+                    </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;drd01&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="DRD01.html">DRD-01 Synth</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +61,6 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white">
                 <li class="breadcrumb-item" aria-current="page"><a href="www.sitstaycreate.com">Home</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="Max.html">Max Projects</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Max Intro</li>
             </ol>
         </nav>
