--- a/DRD01.html
+++ b/DRD01.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="Midiosc.html">midiosc</a>
+                    <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                 </li>
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
                     <a class="nav-link" href="Max_Intro.html">Max Intro</a>
