Fixed CerealOsc.html link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- TODO: Navbar is different somehow than the rest except DRD01 - investigate -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +82,7 @@
     <div class="Home-Section-Container text-center" name="Home-Section-VirtualGrid" hidden>
         <h4>VirtualGrid</h4>
         <!-- TODO: Update when new page created -->
-        <a href="Midiosc.html">
+        <a href="CerealOSC.html">
             <img src="./static/images/midiosc/midiosc-1.1.0(2).png" 
             class="home-card-image img-fluid d-block mx-auto">
         </a>
