Fixed CerealOsc.html link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="Home-Section-Container text-center" name="Home-Section-Midi.2.OSC">
         <h4>Midi.2.OSC</h4>
-        <a href="Midiosc.html">
+        <a href="CerealOSC.html">
             <img src="./static/images/midiosc/midiosc-ssc.png" 
             class="home-card-image img-fluid d-block mx-auto">
         </a>
