--- a/Midi2OSC.html
+++ b/Midi2OSC.html
@@ -1,11 +1,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>LiveClip</title>
+        <title>Midi2OSC</title>
         
-
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-194353784-1"></script>
         <script>
@@ -19,12 +16,13 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
+        <script src="https://player.vimeo.com/api/player.js"></script>
 
         <title>SitStayCreate</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="./static/css/style.css">
     </head>
+
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
@@ -62,61 +60,62 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white">
                 <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">LiveClip</li>
+                <li class="breadcrumb-item active" aria-current="page">Midi2OSC</li>
             </ol>
         </nav>
         <div class="card mx-5 mb-5 justify-content-center">
             <div class="card-header bg-dark text-light">
-                <h1 class="display-4 text-center">LiveClip</h1>
+                <h1 class="display-4 text-center">Midi2OSC</h1>
             </div>
             <div class="card-body">
-                <h3 class="text-center">Intro</h3>
-                <p>
-                    This Max project is a Max for Live device. Max for Live is an add on for the Ableton Live music production environment.
-                    Ableton Live is the brainchild of Monolake's Robert Henke. It can serve many purposes from digital audio workstation (DAW)
-                    to electronic ensemble to audio effects bank. The software is designed to offer a musician the flexibility to define its
-                    use. This approach to design pairs well with a programming language like Max/MSP. There is even an API called the Live Object
-                    Model (LOM) accessible via a suite of provided Max objects and JavaScript.
-                </p>
-                <p>
-                    LiveClip allows a Grid to edit midi notes in a midi clip stored inside of Ableton. It was designed with Ableton
-                    Live 9, but probably will work with newer versions of live. The API calls are all in a JavaScript file, so should be easy
-                    to hack if it's not working for you. If you look at the LOM you'll see that there are some now deprecated methods for editing
-                    the notes used in the project.
-                </p>
-                <p>
-                    This patch is to be used with a Grid, specifically one with 128 buttons oriented horizontally. If you do
-                    not have a Grid, our app midiosc will allow you to use this patch with a Midi controller or
-                    with your mouse with CerealOSC v1.1.0.
-                </p>
-                <div class="my-3">
-                    <img src="./static/images/LiveClip/liveclip.png" class="home-card-image img-fluid d-block mx-auto">
+                <div style="padding:62.5% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/572275423?h=5833fc89f4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="midiosc1.1.0-demo.mov"></iframe>
                 </div>
-                <h3 class="text-center">Instructions</h3>
+                <h3 class="text-center">Midi2OSC</h3>
                 <p>
-                    LiveClip is an X0X style 16 step sequencer. It takes an Ableton Live Clip and uses it as storage for the sequencer. It will load seven
-                    target notes from a highlighted clip and will display them on the grid as lit buttons.
+                    Midi2OSC is a MIDI adapter for the midi grids to connect to Monome Grid apps.
+                    Midi2OSC is written in Java and offers a cross-platform way to connect a MIDI grid controller
+                    to a Monome app. It uses CerealOSC, so does not require any modification to existing Monome apps.
                 </p>
-                <h5 class="text-center">Note Mode</h5>
-                <div class="my-3">
-                    <img src="./static/images/LiveClip/notemode.png" class="home-card-image img-fluid d-block mx-auto">
+                <p>
+                    Navigate to <a href="https://github.com/SitStayCreate/Midi2OSC">https://github.com/SitStayCreate/Midi2OSC</a> and download the JAR file located
+                    there. Midi2OSC is a Java application that requires Java 8 to run. Please download the JRE if you do not already have it installed on your machine.
+                    You can find this at <a href="https://www.oracle.com/">Oracle.com</a>
+                </p>
+                <div>
+                    <h3 class="text-center">Introduction</h3>
+                    <p>
+                        Electronic music is very different from many other styles of music. The barrier to entry is mostly financial and anyone can make compelling
+                        music at home. Instead of needing lessons for years as you might with an acoustic instrument, the focus is more on creating short vignettes
+                        and looping them. Pedants might debate me on this and they aren't wrong, but this isn't a website for them. It's a website for everyone else.
+                        Absolute truths are rarely useful when discussing things that are outside of the realm of hard science; approximate truths are sometimes better
+                        in applied sciences and arts. This is to say that practical knowledge often limits the scope in which it is discussed to keep the context manageable.
+                    </p>
+                    <h3 class="text-center">What is a Grid Controller?</h3>
+                    <p>
+                        A grid controller is a controller that has buttons laid out in multiple rows and columns. They come in many varieties from drum pads with 4
+                        rows and 4 columns to controllers with as many as 16 rows and 16 columns of buttons. The most commonly available typically are 4x4
+                        or 8x8 controllers.
+                    </p>
                 </div>
-                <p>
-                    The default mode is note mode. Buttons [0 0] - [15 0] display the playhead of the clip as a blinking light. Pressing one of these buttons
-                    will change the mode from Note mode to Velo mode. More on this in the next section. Buttons [0 1] - [15 7] edit the notes in the highlighted
-                    clip. The notes that it selects and edits can be set from the UI in the patch.
-                </p>
-                <h5 class="text-center">Velo Mode</h5>
                 <div class="my-3">
-                    <img src="./static/images/LiveClip/velomode.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/midiosc/midiosc-ssc.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
+                <h3 class="text-center">Midi2OSC Instructions</h3>
                 <p>
-                    Once in velo mode the blinking light will disappear, the selected column will be lit and the selected velocity will be brightly lit.
-                    Pressing a button will change the velocity of the notes in the grid and assign a value of 0-127 where notes descend from the top left
-                    note [0 0] - [15 7]. Velocities are set for entire columns (one per step).
+                    To create a virtual OSC device, first select your MIDI controller from the dropdown menus in Midi2OSC. The MIDI in dropdown menu chooses
+                    the device that will be sending MIDI data to Midi2OSC. The MIDI out dropdown menu selects the device that will be receiving MIDI data from
+                    Midi2OSC.
                 </p>
                 <p>
-                    The repo for liveclip can be found here: <a href="https://github.com/SitStayCreate/LiveClip">https://github.com/SitStayCreate/LiveClip</a>.
+                    Next, select the port you would like Midi2OSC to use to receive messages from external apps. Please note, some ports are reserved and may not
+                    be used. Please also note, a port may only be opened by one virtual OSC device.
+                </p>
+                <p>
+                    Finally, select the dimensions for your MIDI controller and click create. You currently can choose from an 8x8 grid or a 16x8 grid. The checkbox
+                    labeled Invert Y-Axis sets the orientation of your controller. Regular orientation in this case is 0-63/127 starting at the top left corner and
+                    ending at the bottom right corner. Inverted orientation, then, starts at the bottom left corner and ends at the top right corner. APC Mini
+                    controllers have inverted orientation, while the Pads object in Lemur has regular orientation, for example.
                 </p>
             </div>
         </div>
